# tauri-plugin-test-core-api

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
.changes/: config.json  initial-release.md  readme.md
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: lib.rs
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: desktop.rs  lib.rs  mobile.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
